[project]
name = "ag2-project-demo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ag2[neo4j,openai]>=0.9.1.post0",
    "autogen[neo4j,openai]>=0.9.1.post0",
    "llama-index>=0.12.37",
    "pdf2image>=1.17.0",
    "pi-heif>=0.22.0",
    "pytesseract>=0.3.13",
    "streamlit>=1.45.1",
    "unstructured>=0.17.2",
    "unstructured-inference>=1.0.2",
    "unstructured-pytesseract>=0.3.15",
]
